--- a/upcoming-sales-website/src/assets/AdvancedItemList.module.css
+++ b/upcoming-sales-website/src/assets/AdvancedItemList.module.css
@@ -15,10 +15,12 @@ div {
     font-family: maplestory;
 }
 
-h1 {
+.h1 {
     text-align: center;
     margin-bottom: 15px;
+    color: whitesmoke
 }
+
 
 .sortControls {
     display: flex;
@@ -241,12 +243,13 @@ hr {
     font-weight: bold;
 }
 
-h4 {
+.h4 {
     font-size: 1.25rem;
     text-align: center;
     margin: 20px 0;
     font-style: italic;
     margin-bottom: 30px;
+    color: whitesmoke;
 }
 
 .categoryHeader {
