--- a/upcoming-sales-website/src/assets/ItemList.module.css
+++ b/upcoming-sales-website/src/assets/ItemList.module.css
@@ -13,9 +13,10 @@ div {
     font-family: maplestory;
 }
 
-h1 {
+.h1 {
     text-align: center;
     margin-bottom: 15px;
+    color: black
 }
 
 .sortControls {
@@ -239,7 +240,7 @@ hr {
     font-weight: bold;
 }
 
-h4 {
+.h4 {
     font-size: 1.25rem;
     text-align: center;
     margin: 20px 0;
